[project]
name = "hive-cli"
version = "0.1.0"
description = "CLI for BWH Hive - manage tasks from the terminal"
authors = [{ name = "BWH Studios", email = "developers@buildwithhussain.com" }]
requires-python = ">=3.10"
dependencies = ["click>=8.0", "requests>=2.28", "rich>=13.0"]

[project.scripts]
hive = "hive_cli.main:cli"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
